<resources>
    <string name="app_name">Artara-ID</string>
    <string name="continue_str">Continue</string>
    <string name="welcome_greeting">Welcome</string>
    <string name="about">About Us</string>
    <string name="artara">Artara</string>
    <string name="id">ID</string>
    <string name="saved_predictions">Saved predictions</string>
    <string name="make_predict">prediksi</string>
    <string name="menu">Menu</string>
    <string name="prediction">Prediction</string>
    <string name="about_us">About Us</string>
    <string name="describe">Artara merupakan aplikasi pengenalan jenis kue nusantara dengan menggunakan teknologi kecerdasan buatan. Artara hadir untuk kamu yang hanya tau atau punya gambar mengenai kue nusantara namun tidak mengetahui nama dari kue tersebut.Dengan artara kamu dapat mengetahui hanya dengan memiliki foto dari kuenya saja, selain itu, memberitahukan kue yang ingin diketahui artara juga dilengkapi dengan tutorial cara pembuatannya.</string>
    <string name="name">name</string>
    <string name="university">university</string>
    <string name="our_member">Our Member</string>
    <string name="result">Result</string>
    <string name="save">Save</string>
    <string name="open">Open</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="rePassword">Retype Password</string>
    <string name="email">Email</string>
    <string name="if_have_account">click here if you have account</string>
    <string name="if_not_have_account">click here if you don\'t have account</string>
    <string name="contoh_user">Contoh User</string>
    <string name="imageview1">ImageView1</string>
    <string name="contoh_resep">Contoh resep</string>
    <string name="resep">Resep</string>
    <string name="contoh_nomor">100.</string>
    <string name="contoh_nama">Dadar Gulung</string>
    <string name="ingredient">Ingredients</string>
    <string name="tutorial">Tutorial</string>
    <string name="contoh_score">90%</string>
    <string name="delete">Delete</string>
    <string name="cake_pict">cake_pict</string>
    <string name="ic_cake">ic_cake</string>
    <string name="ic_score">ic_score</string>
    <string name="ic_predict">ic_predict</string>
    <string name="predict_again">Prediction again ?</string>
    <string name="id_youtube">id_youtube</string>
    <string name="ic_detail">ic_detail</string>
    <string name="ic_delete">ic_delete</string>
    <string name="code_predict">Kode Prediksi</string>
    <string name="our_teams">Our Teams</string>
    <string name="btn_logout">btn_logout</string>
    <string name="requirement">Don\'t be empty</string>
    <string name="password6">Password at least 6 character</string>
    <string name="passwordNotMatch">Password not match</string>
    <string name="usernameHasUsed">username has been used by another user</string>
    <string name="yetMakePredict">You haven\'t made a prediction</string>
    <string name="openYoutube">Open Youtube</string>
    <string name="notFound">Url not found</string>
    <string name="selectImage">You must select an image first</string>
    <string name="wrongHappen">Something wrong happen</string>
    <string name="dataAlreadyExists">Data already exists</string>
    <string name="successfullyDeleted">Successfully deleted</string>
    <string name="notYetAvailable">Not yet available</string>
    <string name="noAvailable">Nothing has saved</string>
    <string name="doNotEmpty">Don\'t be empty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ourTeams">Teams</string>
    <string name="support">Support</string>
    <string name="empty_data">Empty data</string>
    <string name="historyTitle">The cake you saved</string>
    <string name="logo">logo</string>
    <string name="btn_trash_upload">btn_trash_upload</string>
    <string name="logo_predict">logo_predict</string>
    <string name="logo_save">logo_save</string>
    <string name="logo_youtube">logo_youtube</string>
    <string name="wait_second">Wait a second...</string>
    <string name="cake_name">Cake Name</string>
    <string name="source">Source : </string>
    <string name="contoh_sumber">Contoh Sumber</string>
    <string name="title">Title : </string>
    <string name="contoh_judul">Contoh Judul</string>
</resources>