<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/wallpaper_7"
    tools:context=".feature.home.HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A316191B"
        android:paddingTop="10dp"
        android:paddingBottom="5dp">

        <ImageButton
            android:id="@+id/btn_account"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/transparent"
            android:src="@drawable/ic_account"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/btn_logout"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/transparent"
            android:contentDescription="@string/btn_logout"
            android:src="@drawable/btn_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TV_user"
            style="@style/text.bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:text="@string/contoh_user"
            android:textColor="@color/brown_primary"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/btn_account"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/LR_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu"
                android:textColor="@color/white_primary"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="0.5"
                android:text="@string/artara"
                android:textColor="@color/brown_secondary"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="0.5"
                android:text="@string/id"
                android:textColor="@color/white_primary"
                android:textSize="30sp" />
        </LinearLayout>


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:columnCount="2"
            android:rowCount="2"
            android:paddingBottom="40dp"
            android:paddingTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LR_menu">

            <GridLayout
                android:id="@+id/menu_history"
                style="@style/menu"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:columnCount="1"
                android:rowCount="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:contentDescription="@string/saved_predictions"
                    android:src="@drawable/icon_riwawat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center|bottom"
                    android:text="@string/saved_predictions"
                    android:textColor="@color/brown_primary"
                    android:textSize="20sp" />
            </GridLayout>

            <GridLayout
                android:id="@+id/menu_about"
                style="@style/menu"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_margin="10dp"
                android:columnCount="1"
                android:rowCount="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:contentDescription="@string/make_predict"
                    android:src="@drawable/icon_about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center|bottom"
                    android:text="@string/about"
                    android:textColor="@color/brown_primary"
                    android:textSize="20sp" />
            </GridLayout>

            <GridLayout
                android:id="@+id/menu_predict"
                style="@style/menu.predict"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:columnCount="1"
                android:rowCount="2">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/about"
                    android:src="@drawable/icon_camera" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/prediction"
                    android:textColor="@color/brown_primary"
                    android:textSize="22sp" />
            </GridLayout>

        </GridLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>